[package]
name = "wasm-webgl-terminal"
description = "Crate to simulate a terminal in a browser with WASM"
version = "0.1.0"
authors = ["Daniel <daniel.mestres@upr.edu>"]
repository = "https://github.com/DanielMestres/DanielMestres.github.io"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.69"
chrono = "0.4.38"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying. DISABLE ON PROD
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size and performance
opt-level = "s"
lto = "thin"
